ARROW-2806: [C++/Python] More consistent null/nan handling

Fix template bug, lint issues, use np.testing.assert_equal in one place

Change-Id: Ic37fe31c7ed2ce302f7fb8f09367e215be4efdff