cpp/cmake_modules/FindClangTools.cmake
@@ -86,12 +86,10 @@ if (CLANG_FORMAT_VERSION)
 
         if ("${CLANG_FORMAT_BIN}" STREQUAL "CLANG_FORMAT_BIN-NOTFOUND")
           # binary was still not found, look into Cellar
-          # TODO: This currently only works for '.0' patch releases as
-          #       find_program does not support regular expressions
-          #       in the paths.
+          file(GLOB CLANG_FORMAT_PATH "${HOMEBREW_PREFIX}/Cellar/llvm/${CLANG_FORMAT_VERSION}.*")
           find_program(CLANG_FORMAT_BIN
             NAMES clang-format
-            PATHS "${HOMEBREW_PREFIX}/Cellar/llvm/${CLANG_FORMAT_VERSION}.0/bin"
+            PATHS "${CLANG_FORMAT_PATH}/bin"
                   NO_DEFAULT_PATH
           )
         endif()
